crates/opi-tui/tests/snapshots/markdown_snapshots__code_block_multiline_120x20.snap
---
source: crates/opi-tui/tests/markdown_snapshots.rs
assertion_line: 97
expression: "render(cb, 120, 20)"
---
┌ rust ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│use std::collections::HashMap;                                                                                        │
│                                                                                                                      │
│fn main() {                                                                                                           │
│    let mut map = HashMap::new();                                                                                     │
│    map.insert("key", "value");                                                                                       │
│    println!("{:?}", map);                                                                                            │
│}                                                                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
