crates/opi-tui/tests/snapshots/markdown_snapshots__code_block_no_language_80x10.snap
---
source: crates/opi-tui/tests/markdown_snapshots.rs
assertion_line: 90
expression: "render(cb, 80, 10)"
---
┌ code ────────────────────────────────────────────────────────────────────────┐
│some plain text                                                               │
│code here                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
