crates/opi-tui/tests/snapshots/markdown_snapshots__code_block_rust_80x10.snap
---
source: crates/opi-tui/tests/markdown_snapshots.rs
assertion_line: 81
expression: "render(cb, 80, 10)"
---
┌ rust ────────────────────────────────────────────────────────────────────────┐
│fn add(a: i32, b: i32) -> i32 {                                               │
│    a + b                                                                     │
│}                                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
