crates/opi-tui/tests/snapshots/markdown_snapshots__markdown_view_bold_italic_80x24.snap
---
source: crates/opi-tui/tests/markdown_snapshots.rs
assertion_line: 44
expression: "render(md, 80, 24)"
---
This is bold and italic text.
