crates/opi-tui/tests/snapshots/markdown_snapshots__markdown_view_heading_80x24.snap
---
source: crates/opi-tui/tests/markdown_snapshots.rs
assertion_line: 38
expression: "render(md, 80, 24)"
---
Main Title

Subtitle
