crates/opi-tui/tests/snapshots/markdown_snapshots__markdown_view_mixed_120x40.snap
---
source: crates/opi-tui/tests/markdown_snapshots.rs
assertion_line: 68
expression: "render(md, 120, 40)"
---
Getting Started

Welcome to opi, your AI coding assistant.

Features

- Fast responses - Tool integration

┌ bash ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│cargo install opi                                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘

Enjoy!
