crates/opi-tui/tests/snapshots/markdown_snapshots__markdown_view_paragraphs_80x24.snap
---
source: crates/opi-tui/tests/markdown_snapshots.rs
assertion_line: 52
expression: "render(md, 80, 24)"
---
First paragraph here.

Second paragraph with more text.

Third one.
