crates/opi-tui/tests/snapshots/markdown_snapshots__markdown_view_with_code_block_80x24.snap
---
source: crates/opi-tui/tests/markdown_snapshots.rs
assertion_line: 60
expression: "render(md, 80, 24)"
---
Here is some code:

┌ rust ────────────────────────────────────────────────────────────────────────┐
│fn main() {                                                                   │
│    println!("hello");                                                        │
│}                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘

After the code block.
